--- a/public/index.html
+++ b/public/index.html
@@ -25,28 +25,6 @@
       </div>
     </header>
 
-    <!-- Fixed Top Controls -->
-    <div id="top-controls" class="top-controls" style="display: none;">
-      <div class="controls-content">
-        <div class="control-group">
-          <label><i class="fas fa-hashtag"></i> Questions:</label>
-          <input type="number" id="question-count" min="1" value="20">
-        </div>
-        <div class="control-group">
-          <label><i class="fas fa-bolt"></i></label>
-          <input type="checkbox" id="live-test-checkbox">
-          <span>Live Test</span>
-        </div>
-        <div class="control-group">
-          <label><i class="fas fa-layer-group"></i> Levels:</label>
-          <div id="level-checkboxes" class="level-filters-inline"></div>
-        </div>
-        <div class="control-group">
-          <p id="max-questions-info" class="quiz-info"></p>
-        </div>
-      </div>
-    </div>
-
     <!-- Left Sidebar for Review Content -->
     <aside id="left-sidebar" class="left-sidebar" style="display: none;">
       <div id="results-container" class="results-panel"></div>
@@ -73,6 +51,45 @@
       <div class="loading-subtitle">Please wait while questions are being loaded...</div>
     </div>
   </div>
+
+  <!-- Floating Action Buttons -->
+  <button id="control-fab" class="fab" aria-label="Toggle Controls">
+    <i class="fas fa-sliders-h"></i>
+  </button>
+  
+  <button id="sidebar-fab" class="fab mobile-only" aria-label="Toggle Review">
+    <i class="fas fa-list"></i>
+  </button>
+
+  <!-- Floating Control Panel -->
+  <div id="control-panel" class="floating-panel" role="dialog" aria-modal="true" aria-hidden="true">
+    <div class="panel-header">
+      <h3>Quiz Controls</h3>
+      <button id="close-panel" class="close-btn" aria-label="Close Panel">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+    <div class="panel-content">
+      <div class="control-group">
+        <label><i class="fas fa-hashtag"></i> Questions:</label>
+        <input type="number" id="question-count" min="1" value="20">
+      </div>
+      <div class="control-group">
+        <label><i class="fas fa-bolt"></i> Live Test</label>
+        <input type="checkbox" id="live-test-checkbox">
+      </div>
+      <div class="control-group">
+        <label><i class="fas fa-layer-group"></i> Levels:</label>
+        <div id="level-checkboxes" class="level-filters-inline"></div>
+      </div>
+      <div class="control-group">
+        <p id="max-questions-info" class="quiz-info"></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Panel Overlay -->
+  <div id="panel-overlay" class="panel-overlay"></div>
 
   <!-- jQuery CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
