fix back button and folder in folder error

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
           <h1 id="quiz-title">Aviation Quiz</h1>
         </div>
         <nav class="header-nav">
-          <button id="home-btn" class="nav-btn" onclick="listQuizzes()">
+          <button id="home-btn" class="nav-btn">
             <i class="fas fa-home"></i>
             <span>Home</span>
           </button>
